# sphere-points-generator

./: README.md  directions.csv  equilibration_method.py  main.py
src/: CMakeLists.txt  main.py
src/equilibration_method/: __init__.py  equilibration_method.py  initial_directions.py  utils.py
src/initial_directions/: initial_directions.cpp  initial_directions.h
src/plotting/: plot_directions.py
src/tests/: directions_plot.cpp  eigen_test.cpp  matplotlibcpp_test.cpp
src/utils/: tensors.h
src/visualiser/: visualiser.h
src/voronoi_cels/: __init__.py  calculate_centroids.py  print_vcels.py
